-hashed OCI_TARGET_BASE

--- a/.github/workflows/artifact-image-complete-matrix.yml
+++ b/.github/workflows/artifact-image-complete-matrix.yml
@@ -52,7 +52,7 @@ env:
   USERPATCHES_DIR: "" # folder inside USERPATCHES_REPOSITORY
 
   # Armbian envs. Adjust to your needs.
-  OCI_TARGET_BASE: "ghcr.io/${{ github.repository }}/" # This is picked up by the Docker launcher automatically. It does _not_ override the targets.yaml during info resolution.
+  OCI_TARGET_BASE: "ghcr.io/${{ github.repository }}-hashed/" # This is picked up by the Docker launcher automatically. It does _not_ override the targets.yaml during info resolution.
   DOCKER_ARMBIAN_BASE_COORDINATE_PREFIX: "ghcr.io/${{ github.repository }}:armbian-next-" # Use Docker image in same repo
   DOCKER_SKIP_UPDATE: "yes" # Do not apt update/install/requirements/etc during Dockerfile build, trust DOCKER_ARMBIAN_BASE_COORDINATE_PREFIX's images are up-to-date
 
