add debian trixie to docker image builder

--- a/.github/workflows/docker-image-simple.yml
+++ b/.github/workflows/docker-image-simple.yml
@@ -31,6 +31,10 @@ jobs:
             release: "bookworm"
             cache-from: ""
             cache-to: ""
+          - os: "debian"
+            release: "trixie"
+            cache-from: ""
+            cache-to: ""
           #- os: "ubuntu"
           #  release: "focal" # to make sure -- not really "supported"
           #- os: "ubuntu"
