--- a/.github/workflows/artifact-image-complete-matrix.yml
+++ b/.github/workflows/artifact-image-complete-matrix.yml
@@ -104,7 +104,7 @@ jobs:
         with:
           repository: ${{ env.USERPATCHES_REPOSITORY }}
           ref: ${{ env.USERPATCHES_REF }}
-          fetch-depth: 1
+          fetch-depth: 0 # fetch all history; much faster for self-hosted runners
           clean: false # true is default.
           path: userpatches.repo
 
@@ -266,7 +266,7 @@ jobs:
         with:
           repository: ${{ env.BUILD_REPOSITORY }}
           ref: ${{ needs.matrix_prep.outputs.build-sha1 }}
-          fetch-depth: 1
+          fetch-depth: ${{ matrix.fetch_depth }} # fetch all history for self-hosted, but shallow for GH-hosted
           clean: false # true is default. it *will* delete the hosts /dev if mounted inside.
 
       # clone the userpatches repo (`armbian/os`)
@@ -276,7 +276,7 @@ jobs:
         with:
           repository: ${{ env.USERPATCHES_REPOSITORY }}
           ref: ${{ env.USERPATCHES_REF }}
-          fetch-depth: 1
+          fetch-depth: ${{ matrix.fetch_depth }} # fetch all history for self-hosted, but shallow for GH-hosted
           clean: false # true is default.
           path: userpatches.repo
 
@@ -330,6 +330,7 @@ jobs:
           repository: ${{ env.BUILD_REPOSITORY }}
           ref: ${{ needs.matrix_prep.outputs.build-sha1 }}
           clean: false # true is default. it *will* delete the hosts /dev if mounted inside.
+          fetch-depth: ${{ matrix.fetch_depth }} # fetch all history for self-hosted, but shallow for GH-hosted
 
       # clone the userpatches repo (`armbian/os`)
       - name: "Checkout userpatches repo: ${{env.USERPATCHES_REPOSITORY}}#${{env.USERPATCHES_REF}}"
@@ -338,7 +339,7 @@ jobs:
         with:
           repository: ${{ env.USERPATCHES_REPOSITORY }}
           ref: ${{ env.USERPATCHES_REF }}
-          fetch-depth: 1
+          fetch-depth: ${{ matrix.fetch_depth }} # fetch all history for self-hosted, but shallow for GH-hosted
           clean: false # true is default.
           path: userpatches.repo
 
