--- a/.github/workflows/artifact-image-complete-matrix.yml
+++ b/.github/workflows/artifact-image-complete-matrix.yml
@@ -261,22 +261,22 @@ jobs:
         if: ${{ ( env.USERPATCHES_REPOSITORY != '' ) && ( env.USERPATCHES_REF != '' ) }}
         run: rm -rf userpatches.repo
 
-      - name: "Checkout build repo with depth ${{ matrix.fetch_depth }}"
+      - name: "Checkout build repo with depth ${{ matrix.fdepth }}"
         uses: actions/checkout@v3 # We don't need to clone git, really. A wget would suffice for GH-hosted runners. But using clone is better for Igor-hosted runners.
         with:
           repository: ${{ env.BUILD_REPOSITORY }}
           ref: ${{ needs.matrix_prep.outputs.build-sha1 }}
-          fetch-depth: ${{ matrix.fetch_depth }} # fetch all history for self-hosted, but shallow for GH-hosted
+          fetch-depth: ${{ matrix.fdepth }} # fetch all history for self-hosted, but shallow for GH-hosted
           clean: false # true is default. it *will* delete the hosts /dev if mounted inside.
 
       # clone the userpatches repo (`armbian/os`)
-      - name: "Checkout userpatches repo with depth ${{ matrix.fetch_depth }}: ${{env.USERPATCHES_REPOSITORY}}#${{env.USERPATCHES_REF}}"
+      - name: "Checkout userpatches repo with depth ${{ matrix.fdepth }}: ${{env.USERPATCHES_REPOSITORY}}#${{env.USERPATCHES_REF}}"
         uses: actions/checkout@v3
         if: ${{ ( env.USERPATCHES_REPOSITORY != '' ) && ( env.USERPATCHES_REF != '' ) }}
         with:
           repository: ${{ env.USERPATCHES_REPOSITORY }}
           ref: ${{ env.USERPATCHES_REF }}
-          fetch-depth: ${{ matrix.fetch_depth }} # fetch all history for self-hosted, but shallow for GH-hosted
+          fetch-depth: ${{ matrix.fdepth }} # fetch all history for self-hosted, but shallow for GH-hosted
           clean: false # true is default.
           path: userpatches.repo
 
@@ -324,22 +324,22 @@ jobs:
         if: ${{ ( env.USERPATCHES_REPOSITORY != '' ) && ( env.USERPATCHES_REF != '' ) }}
         run: rm -rf userpatches.repo
 
-      - name: "Checkout build repo with depth ${{ matrix.fetch_depth }}"
+      - name: "Checkout build repo with depth ${{ matrix.fdepth }}"
         uses: actions/checkout@v3
         with:
           repository: ${{ env.BUILD_REPOSITORY }}
           ref: ${{ needs.matrix_prep.outputs.build-sha1 }}
           clean: false # true is default. it *will* delete the hosts /dev if mounted inside.
-          fetch-depth: ${{ matrix.fetch_depth }} # fetch all history for self-hosted, but shallow for GH-hosted
+          fetch-depth: ${{ matrix.fdepth }} # fetch all history for self-hosted, but shallow for GH-hosted
 
       # clone the userpatches repo (`armbian/os`)
-      - name: "Checkout userpatches repo with depth ${{ matrix.fetch_depth }}: ${{env.USERPATCHES_REPOSITORY}}#${{env.USERPATCHES_REF}}"
+      - name: "Checkout userpatches repo with depth ${{ matrix.fdepth }}: ${{env.USERPATCHES_REPOSITORY}}#${{env.USERPATCHES_REF}}"
         uses: actions/checkout@v3
         if: ${{ ( env.USERPATCHES_REPOSITORY != '' ) && ( env.USERPATCHES_REF != '' ) }}
         with:
           repository: ${{ env.USERPATCHES_REPOSITORY }}
           ref: ${{ env.USERPATCHES_REF }}
-          fetch-depth: ${{ matrix.fetch_depth }} # fetch all history for self-hosted, but shallow for GH-hosted
+          fetch-depth: ${{ matrix.fdepth }} # fetch all history for self-hosted, but shallow for GH-hosted
           clean: false # true is default.
           path: userpatches.repo
 
