docker-image-simple: add ubuntu lunar & mantic

--- a/.github/workflows/docker-image-simple.yml
+++ b/.github/workflows/docker-image-simple.yml
@@ -19,14 +19,6 @@ jobs:
             release: "jammy"
             cache-from: "type=gha" # all-automatic Github Actions caching
             cache-to: "type=gha,mode=max" # all-automatic Github Actions caching, max mode
-          #- os: "ubuntu"
-          #  release: "kinetic"
-          #- os: "debian"
-          #  release: "bullseye"
-          #  cache-from: ""
-          #  cache-to: ""
-          #- os: "debian"
-          #  release: "sid"
           - os: "debian"
             release: "bookworm"
             cache-from: ""
@@ -35,12 +27,14 @@ jobs:
             release: "trixie"
             cache-from: ""
             cache-to: ""
-          #- os: "ubuntu"
-          #  release: "focal" # to make sure -- not really "supported"
-          #- os: "ubuntu"
-          #  release: "lunar" # better be early than late
-          #  cache-from: ""
-          #  cache-to: ""
+          - os: "ubuntu"
+            release: "lunar"
+            cache-from: ""
+            cache-to: ""
+          - os: "ubuntu"
+            release: "mantic"
+            cache-from: ""
+            cache-to: ""
     name: "${{ matrix.release }} (${{ matrix.os }})"
     env:
       DOCKERFILE_OS: "${{ matrix.os }}"
