docker-image-simple: drop lunar, add noble

--- a/.github/workflows/docker-image-simple.yml
+++ b/.github/workflows/docker-image-simple.yml
@@ -28,11 +28,11 @@ jobs:
             cache-from: ""
             cache-to: ""
           - os: "ubuntu"
-            release: "lunar"
+            release: "mantic"
             cache-from: ""
             cache-to: ""
           - os: "ubuntu"
-            release: "mantic"
+            release: "noble"
             cache-from: ""
             cache-to: ""
     name: "${{ matrix.release }} (${{ matrix.os }})"
